se agrega cambios para prod

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -11,15 +11,13 @@
 
 
 ## PRODUCCION
-##ip.c1=11.245.88.11
-##port.c1=31215
-##sid.c1=merchant
+ip.c1=11.245.88.11
+port.c1=31215
+sid.c1=merchant
 
-ip.c1=localhost
-port.c1=1521
-sid.c1=ORCLPDB1.localdomain
-
-
+#ip.c1=localhost
+#port.c1=1521
+#sid.c1=ORCLPDB1.localdomain
 
 ##Usuario merchant QA
 user.c1=6e6723fe6634bfab1bb7e1e093ff6e47ebe3d3c
